Add image to homepage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/burnt-cooking.jpg" width="400">
     <p><a href="./recipes/deviled-egg-salad.html">Deviled Egg Salad</a></p>
     <p><a href="./recipes/lemon-chicken.html">Lemon Chicken</a></p>
     <p><a href="./recipes/baked-salmon-with-grapefruit-salad.html">Baked Salmon with Grapefruit</a></p>
